tests/input/ill-typed/incorrect_arity/my-test-2.stella
language core;

fn Bool::not(b : Bool) -> Bool {
  return
    if b then false else true ;
}

fn main() -> Bool {
  return Bool::not(true);
}